src/styles/Page.css
.page {
  background-color: var(--dark-background);
  --page-width: 40vw;
  width: var(--page-width);
  aspect-ratio: 1 / 1.41;
  color: var(--light-text);

  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;

  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: auto auto auto;
  grid-template-areas:
    "personal-info personal-data"
    "education skills"
    "work-experience skills";
  align-items: stretch;
  align-content: start;
  column-gap: 15px;
  row-gap: 15px;

  padding: 15px 15px;

  & * {
    font-weight: normal;
    font-size: calc(var(--page-width) / 52);

    & h1 {
      font-weight: bold;
      font-size: calc(var(--page-width) / 22);
    }

    & h2 {
      font-size: calc(var(--page-width) / 32);
    }

    & h3 {
      font-size: calc(var(--page-width) / 40);
      text-transform: uppercase;
      font-weight: bold;
    }

    & h4 {
      font-size: calc(var(--page-width) / 40);
      font-weight: bold;
    }

    & h5 {
      font-size: calc(var(--page-width) / 46);
    }

    & pre {
      white-space: pre-wrap;
      text-align: justify;
    }

    & img {
      filter: invert(1);
      height: calc(var(--page-width) / 42);
    }
  }

  & .personal-info {
    grid-area: personal-info;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 2px;
  }

  & .personal-data {
    grid-area: personal-data;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 5px;

    & .entry {
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      align-items: center;
      gap: 5px;
    }
  }

  & .education {
    grid-area: education;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
    gap: 5px;

    & .school {
      display: grid;
      grid-template-columns: auto auto;
      grid-template-rows: auto auto;
      grid-template-areas:
        "main-info side-info"
        "additional-info additional-info";

      & .main-info {
        grid-area: main-info;

        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;
      }

      & .side-info {
        grid-area: side-info;

        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-end;
      }

      & .additional-info {
        grid-area: additional-info;

        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;
        gap: 2px;

        margin-top: 3px;
        list-style-type: none;

        & pre {
          list-style-position: inside;
          display: list-item;
          position: relative;
          padding-left: 10px;

          &::before {
            content: "\2022";
            position: absolute;
            left: 0;
          }
        }
      }
    }
  }

  & .work-experience {
    grid-area: work-experience;
  }

  & .skills {
    grid-area: skills;
  }
}

